# BTG-console

./: README.md
3d-models/: README.md
PCB/: README.md
btgc-cart-lib/: Cargo.toml  README.md
btgc-cart-lib/src/: lib.rs
btgc-console/: README.md
btgc-core/: Cargo.toml  README.md
btgc-core/src/: cart_to_console.rs  cart_to_term.rs  console_to_cart.rs  lib.rs  term_to_cart.rs
btgc-term-lib/: Cargo.toml  README.md
btgc-term-lib/src/: lib.rs
terms/: README.md
terms/linux-desktop/: Cargo.toml  Dioxus.toml  justfile
terms/linux-desktop/src/: main.rs
