[package]
name = "btgc-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100", default-features = false }
bincode = { version = "2.0.1", features = ["alloc", "serde"], default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["derive", "alloc", "rc"] }
