[package]
name = "btg-console"
version = "0.1.0"
authors = ["Eoghan West <eowest@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btgc-core = { version = "0.1.0", path = "../../btgc-core" }
btgc-term-lib = { version = "0.1.0", path = "../../btgc-term-lib" }
dioxus = { version = "0.7.0-alpha.3", features = [] }
serialport = { version = "4.7.3", features = ["serde"] }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
